parser.output

state 0
	$accept: .spec $end 

	DATA  shift 8
	CONST  shift 10
	MODULE  shift 9
	PROC  shift 11
	INIT  shift 12
	.  error

	spec  goto 1
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	init_block  goto 7

state 1
	$accept:  spec.$end 

	$end  accept
	.  error


state 2
	spec:  toplevel_body.    (1)
	spec:  toplevel_body.spec 

	DATA  shift 8
	CONST  shift 10
	MODULE  shift 9
	PROC  shift 11
	INIT  shift 12
	.  reduce 1 (src line 125)

	spec  goto 13
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	init_block  goto 7

state 3
	toplevel_body:  data_def.    (3)

	.  reduce 3 (src line 140)


state 4
	toplevel_body:  module_def.    (4)

	.  reduce 4 (src line 142)


state 5
	toplevel_body:  const_def.    (5)

	.  reduce 5 (src line 143)


state 6
	toplevel_body:  proc_def.    (6)

	.  reduce 6 (src line 144)


state 7
	toplevel_body:  init_block.    (7)

	.  reduce 7 (src line 145)


state 8
	data_def:  DATA.IDENTIFIER { idents_one } ; 

	IDENTIFIER  shift 14
	.  error


state 9
	module_def:  MODULE.IDENTIFIER ( parameters_zero ) { module_body_zero } ; 

	IDENTIFIER  shift 15
	.  error


state 10
	const_def:  CONST.IDENTIFIER ASSIGN expr ; 

	IDENTIFIER  shift 16
	.  error


state 11
	proc_def:  PROC.IDENTIFIER ( parameters_zero ) { statements_zero } ; 

	IDENTIFIER  shift 17
	.  error


state 12
	init_block:  INIT.{ statements_zero } ; 

	{  shift 18
	.  error


state 13
	spec:  toplevel_body spec.    (2)

	.  reduce 2 (src line 132)


state 14
	data_def:  DATA IDENTIFIER.{ idents_one } ; 

	{  shift 19
	.  error


state 15
	module_def:  MODULE IDENTIFIER.( parameters_zero ) { module_body_zero } ; 

	(  shift 20
	.  error


state 16
	const_def:  CONST IDENTIFIER.ASSIGN expr ; 

	ASSIGN  shift 21
	.  error


state 17
	proc_def:  PROC IDENTIFIER.( parameters_zero ) { statements_zero } ; 

	(  shift 22
	.  error


state 18
	init_block:  INIT {.statements_zero } ; 
	statements_zero: .    (18)

	IDENTIFIER  shift 25
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	CONST  shift 10
	VAR  shift 27
	IF  shift 28
	CHOICE  shift 29
	RECV  shift 30
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	PEEK  shift 31
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	SEND  shift 32
	FOR  shift 33
	BREAK  shift 34
	GOTO  shift 35
	SKIP  shift 36
	{  shift 26
	;  shift 38
	(  shift 43
	[  shift 48
	.  reduce 18 (src line 192)

	const_def  goto 39
	statements_zero  goto 23
	statement  goto 24
	expr  goto 37

state 19
	data_def:  DATA IDENTIFIER {.idents_one } ; 

	IDENTIFIER  shift 50
	.  error

	idents_one  goto 49

state 20
	module_def:  MODULE IDENTIFIER (.parameters_zero ) { module_body_zero } ; 
	parameters_zero: .    (82)

	IDENTIFIER  shift 54
	.  reduce 82 (src line 457)

	parameters_zero  goto 51
	parameters_one  goto 52
	parameter  goto 53

state 21
	const_def:  CONST IDENTIFIER ASSIGN.expr ; 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 55

state 22
	proc_def:  PROC IDENTIFIER (.parameters_zero ) { statements_zero } ; 
	parameters_zero: .    (82)

	IDENTIFIER  shift 54
	.  reduce 82 (src line 457)

	parameters_zero  goto 57
	parameters_one  goto 52
	parameter  goto 53

state 23
	init_block:  INIT { statements_zero.} ; 

	}  shift 58
	.  error


state 24
	statements_zero:  statement.statements_zero 
	statements_zero: .    (18)

	IDENTIFIER  shift 25
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	CONST  shift 10
	VAR  shift 27
	IF  shift 28
	CHOICE  shift 29
	RECV  shift 30
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	PEEK  shift 31
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	SEND  shift 32
	FOR  shift 33
	BREAK  shift 34
	GOTO  shift 35
	SKIP  shift 36
	{  shift 26
	;  shift 38
	(  shift 43
	[  shift 48
	.  reduce 18 (src line 192)

	const_def  goto 39
	statements_zero  goto 59
	statement  goto 24
	expr  goto 37

state 25
	statement:  IDENTIFIER.: statement 
	statement:  IDENTIFIER.ASSIGN expr ; 
	statement:  IDENTIFIER.ADD_ASSIGN expr ; 
	statement:  IDENTIFIER.SUB_ASSIGN expr ; 
	statement:  IDENTIFIER.MUL_ASSIGN expr ; 
	statement:  IDENTIFIER.QUO_ASSIGN expr ; 
	statement:  IDENTIFIER.REM_ASSIGN expr ; 
	statement:  IDENTIFIER.AND_ASSIGN expr ; 
	statement:  IDENTIFIER.OR_ASSIGN expr ; 
	statement:  IDENTIFIER.XOR_ASSIGN expr ; 
	statement:  IDENTIFIER.SHL_ASSIGN expr ; 
	statement:  IDENTIFIER.SHR_ASSIGN expr ; 
	statement:  IDENTIFIER.( arguments_one ) ; 
	expr:  IDENTIFIER.    (51)

	ADD_ASSIGN  shift 62
	SUB_ASSIGN  shift 63
	MUL_ASSIGN  shift 64
	QUO_ASSIGN  shift 65
	REM_ASSIGN  shift 66
	AND_ASSIGN  shift 67
	OR_ASSIGN  shift 68
	XOR_ASSIGN  shift 69
	SHL_ASSIGN  shift 70
	SHR_ASSIGN  shift 71
	ASSIGN  shift 61
	(  shift 72
	:  shift 60
	.  reduce 51 (src line 328)


state 26
	statement:  {.statements_zero } ; 
	statements_zero: .    (18)

	IDENTIFIER  shift 25
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	CONST  shift 10
	VAR  shift 27
	IF  shift 28
	CHOICE  shift 29
	RECV  shift 30
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	PEEK  shift 31
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	SEND  shift 32
	FOR  shift 33
	BREAK  shift 34
	GOTO  shift 35
	SKIP  shift 36
	{  shift 26
	;  shift 38
	(  shift 43
	[  shift 48
	.  reduce 18 (src line 192)

	const_def  goto 39
	statements_zero  goto 73
	statement  goto 24
	expr  goto 37

state 27
	statement:  VAR.IDENTIFIER type ; 
	statement:  VAR.IDENTIFIER type ASSIGN expr ; 

	IDENTIFIER  shift 74
	.  error


state 28
	statement:  IF.expr { statements_zero } ; 
	statement:  IF.expr { statements_zero } ELSE { statements_zero } ; 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 75

state 29
	statement:  CHOICE.blocks_one ; 

	{  shift 77
	.  error

	blocks_one  goto 76

state 30
	statement:  RECV.( arguments_one ) ; 

	(  shift 78
	.  error


state 31
	statement:  PEEK.( arguments_one ) ; 

	(  shift 79
	.  error


state 32
	statement:  SEND.( arguments_one ) ; 

	(  shift 80
	.  error


state 33
	statement:  FOR.{ statements_zero } ; 
	statement:  FOR.IDENTIFIER IN expr { statements_zero } ; 
	statement:  FOR.IDENTIFIER IN RANGE expr TO expr { statements_zero } ; 

	IDENTIFIER  shift 82
	{  shift 81
	.  error


state 34
	statement:  BREAK.; 

	;  shift 83
	.  error


state 35
	statement:  GOTO.IDENTIFIER ; 

	IDENTIFIER  shift 84
	.  error


state 36
	statement:  SKIP.; 

	;  shift 85
	.  error


state 37
	statement:  expr.; 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.LAND expr 
	expr:  expr.LOR expr 
	expr:  expr.EQL expr 
	expr:  expr.LSS expr 
	expr:  expr.GTR expr 
	expr:  expr.NEQ expr 
	expr:  expr.LEQ expr 
	expr:  expr.GEQ expr 

	ADD  shift 87
	SUB  shift 88
	MUL  shift 89
	QUO  shift 90
	REM  shift 91
	AND  shift 92
	OR  shift 93
	XOR  shift 94
	SHL  shift 95
	SHR  shift 96
	LAND  shift 97
	LOR  shift 98
	EQL  shift 99
	LSS  shift 100
	GTR  shift 101
	NEQ  shift 102
	LEQ  shift 103
	GEQ  shift 104
	;  shift 86
	.  error


state 38
	statement:  ;.    (49)

	.  reduce 49 (src line 319)


state 39
	statement:  const_def.    (50)

	.  reduce 50 (src line 323)


state 40
	expr:  NUMBER.    (52)

	.  reduce 52 (src line 332)


state 41
	expr:  NOT.expr 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 105

state 42
	expr:  SUB.expr 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 106

state 43
	expr:  (.expr ) 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 107

state 44
	expr:  TIMEOUT_RECV.( arguments_one ) 

	(  shift 108
	.  error


state 45
	expr:  TIMEOUT_PEEK.( arguments_one ) 

	(  shift 109
	.  error


state 46
	expr:  NONBLOCK_RECV.( arguments_one ) 

	(  shift 110
	.  error


state 47
	expr:  NONBLOCK_PEEK.( arguments_one ) 

	(  shift 111
	.  error


state 48
	expr:  [.arguments_zero ] 
	arguments_zero: .    (88)

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  reduce 88 (src line 487)

	expr  goto 114
	arguments_zero  goto 112
	arguments_one  goto 113

state 49
	data_def:  DATA IDENTIFIER { idents_one.} ; 

	}  shift 115
	.  error


state 50
	idents_one:  IDENTIFIER.    (79)
	idents_one:  IDENTIFIER., 
	idents_one:  IDENTIFIER., idents_one 

	,  shift 116
	.  reduce 79 (src line 443)


state 51
	module_def:  MODULE IDENTIFIER ( parameters_zero.) { module_body_zero } ; 

	)  shift 117
	.  error


state 52
	parameters_zero:  parameters_one.    (83)

	.  reduce 83 (src line 462)


state 53
	parameters_one:  parameter.    (84)
	parameters_one:  parameter., 
	parameters_one:  parameter., parameters_one 

	,  shift 118
	.  reduce 84 (src line 467)


state 54
	parameter:  IDENTIFIER.type 

	IDENTIFIER  shift 120
	CHANNEL  shift 122
	UNSTABLE  shift 123
	[  shift 121
	.  error

	type  goto 119

state 55
	const_def:  CONST IDENTIFIER ASSIGN expr.; 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.LAND expr 
	expr:  expr.LOR expr 
	expr:  expr.EQL expr 
	expr:  expr.LSS expr 
	expr:  expr.GTR expr 
	expr:  expr.NEQ expr 
	expr:  expr.LEQ expr 
	expr:  expr.GEQ expr 

	ADD  shift 87
	SUB  shift 88
	MUL  shift 89
	QUO  shift 90
	REM  shift 91
	AND  shift 92
	OR  shift 93
	XOR  shift 94
	SHL  shift 95
	SHR  shift 96
	LAND  shift 97
	LOR  shift 98
	EQL  shift 99
	LSS  shift 100
	GTR  shift 101
	NEQ  shift 102
	LEQ  shift 103
	GEQ  shift 104
	;  shift 124
	.  error


state 56
	expr:  IDENTIFIER.    (51)

	.  reduce 51 (src line 328)


state 57
	proc_def:  PROC IDENTIFIER ( parameters_zero.) { statements_zero } ; 

	)  shift 125
	.  error


state 58
	init_block:  INIT { statements_zero }.; 

	;  shift 126
	.  error


state 59
	statements_zero:  statement statements_zero.    (19)

	.  reduce 19 (src line 197)


state 60
	statement:  IDENTIFIER :.statement 

	IDENTIFIER  shift 25
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	CONST  shift 10
	VAR  shift 27
	IF  shift 28
	CHOICE  shift 29
	RECV  shift 30
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	PEEK  shift 31
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	SEND  shift 32
	FOR  shift 33
	BREAK  shift 34
	GOTO  shift 35
	SKIP  shift 36
	{  shift 26
	;  shift 38
	(  shift 43
	[  shift 48
	.  error

	const_def  goto 39
	statement  goto 127
	expr  goto 37

state 61
	statement:  IDENTIFIER ASSIGN.expr ; 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 128

state 62
	statement:  IDENTIFIER ADD_ASSIGN.expr ; 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 129

state 63
	statement:  IDENTIFIER SUB_ASSIGN.expr ; 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 130

state 64
	statement:  IDENTIFIER MUL_ASSIGN.expr ; 

	IDENTIFIER  shift 56
	NUMBER  shift 40
	SUB  shift 42
	NOT  shift 41
	TIMEOUT_RECV  shift 44
	NONBLOCK_RECV  shift 46
	TIMEOUT_PEEK  shift 45
	NONBLOCK_PEEK  shift 47
	(  shift 43
	[  shift 48
	.  error

	expr  goto 131

state 65
	statement:  IDENTIFIER QUO_ASSIGN.expr ; 
